# server/Api/DTOs/TurbineCommandDto.cs
@@ -1,0 +1,6 @@
+﻿namespace Api.DTOs;
+
+public class TurbineCommandDto
+{
+    public string Command { get; set; } = "";
+}
